--- a/Landingpage/style.css
+++ b/Landingpage/style.css
@@ -1,6 +1,6 @@
 body {margin: 0;}
 
-Header {
+header {
     background-color: #1F2937;
     color:white;
     padding-left:15%;
@@ -43,31 +43,3 @@ a {
 
 /*Lower Header Area*/
 
-.Hlower {
-    display:flex;
-    flex-direction: row;
-    gap:20px;
-    
-}
-
-.intro {
-   Display:flex;
-   flex-direction: row; 
-   flex-wrap: wrap;
-   justify-content: flex-start;
-}
-h3 {
-    font-size: 48px;
-    font-weight:900;
-    color:#F9FAF8;
-    display: flex;
-}
-p {
-   flex:1;
-   font-size: 18px;
-   color:#E5E7EB;
-}
-.chairdog{
-    max-width:100%;
-    height:auto;
-}
