--- a/Landingpage/style.css
+++ b/Landingpage/style.css
@@ -3,8 +3,8 @@ body {margin: 0;}
 header {
     background-color: #1F2937;
     color:white;
-    padding-left:15%;
-    padding-right:15%;
+    padding-left:5%;
+    padding-right:5%;
     padding-top:20px;
     max-height: 40vh;
     display:flex;
@@ -22,19 +22,29 @@ header {
     gap:20px;
     font-size:18px;
     color: #E5E7EB;
+    height: 5vh;
 }
 
 .pusher {
     margin-left:auto;
 }
 
-.logo {
-
-}
 .link {
     display:flex;
-
+    font-size: 2vh;
+    justify-content: space-around;
+    margin-right:5%;
+    align-self: center;
 }
+
+.logo {
+    display: flex;
+    flex-shrink: 1;
+    height:4vh;
+    width: auto;;
+    min-width: 0;
+    min-height: 0;
+} 
 
 a {
     color:white;
@@ -43,3 +53,45 @@ a {
 
 /*Lower Header Area*/
 
+.Hlower {
+    display: flex;
+    gap:20px;
+}
+
+.intro {
+    max-height: 25vh;
+    min-height: 0;
+    margin: 0;
+}
+
+p {
+    font-size: 2vh;
+    margin: 0;
+    ma
+}
+
+.h3 {
+    font-size: 5vh;
+    font-weight: 800;
+    color:#f9faf8;
+}
+.chairdog {
+    flex: 1,0,auto;
+    min-width: 28vw;
+    min-height: 0;
+    max-height: 25vh;
+    height: 25vh;
+    margin:5%;
+    margin-top:2.5%;
+    align-self: flex-start;
+}
+
+button {
+
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 10px;
+    margin-top: 1vh;
+    padding:.5vh .5vw;
+    font-size: 2vh;
+}
