--- a/Landingpage/style.css
+++ b/Landingpage/style.css
@@ -1,4 +1,8 @@
-body {margin: 0;}
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
 
 header {
     background-color: #1F2937;
@@ -22,7 +26,7 @@ header {
     gap:20px;
     font-size:18px;
     color: #E5E7EB;
-    height: 5vh;
+    height: 2.5vh;
 }
 
 .pusher {
@@ -31,7 +35,7 @@ header {
 
 .link {
     display:flex;
-    font-size: 2vh;
+    font-size: 1.75vh;
     justify-content: space-around;
     margin-right:5%;
     align-self: center;
@@ -40,7 +44,7 @@ header {
 .logo {
     display: flex;
     flex-shrink: 1;
-    height:4vh;
+    height:3.5vh;
     width: auto;;
     min-width: 0;
     min-height: 0;
@@ -64,7 +68,7 @@ a {
     margin: 0;
 }
 
-p {
+.Intro p {
     font-size: 2vh;
     margin: 0;
     ma
@@ -77,7 +81,7 @@ p {
 }
 .chairdog {
     flex: 1,0,auto;
-    min-width:20vw;;
+    min-width:18vw;;
     max-width: 300px;
     min-height: 0;
     max-height: 25vh;
@@ -92,7 +96,7 @@ button {
     background-color: #3882f6;
     color: #f9faf8;
     border-radius: 10px;
-    margin-top: 1vh;
-    padding:.5vh .5vw;
-    font-size: 2vh;
+    margin-top: 2vh;
+    padding:.2vh .5vw;
+    font-size: 1.75vh;
 }
