--- a/Landingpage/style.css
+++ b/Landingpage/style.css
@@ -100,3 +100,10 @@ button {
     padding:.2vh .5vw;
     font-size: 1.75vh;
 }
+
+.interestimages {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
